--- a/package.json
+++ b/package.json
@@ -9,16 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.7",
+    "@tabler/icons-react": "^3.34.0",
+    "@tiptap/extension-bullet-list": "^2.23.1",
+    "@tiptap/extension-emoji": "^2.23.1",
+    "@tiptap/extension-font-family": "^2.23.1",
+    "@tiptap/extension-highlight": "^2.23.1",
+    "@tiptap/extension-image": "^2.23.1",
+    "@tiptap/extension-link": "^2.23.1",
+    "@tiptap/extension-list-item": "^2.23.1",
+    "@tiptap/extension-ordered-list": "^2.23.1",
+    "@tiptap/extension-subscript": "^2.23.1",
+    "@tiptap/extension-superscript": "^2.23.1",
+    "@tiptap/extension-table": "^2.23.1",
+    "@tiptap/extension-table-cell": "^2.23.1",
+    "@tiptap/extension-table-header": "^2.23.1",
+    "@tiptap/extension-table-row": "^2.23.1",
+    "@tiptap/extension-task-item": "^2.23.1",
+    "@tiptap/extension-task-list": "^2.23.1",
+    "@tiptap/extension-text-style": "^2.23.1",
+    "@tiptap/extension-underline": "^2.23.1",
+    "@tiptap/pm": "^2.23.1",
+    "@tiptap/react": "^2.23.1",
+    "@tiptap/starter-kit": "^2.23.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "next": "15.4.0-canary.104",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5"
   }
 }
