--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@tabler/icons-react": "^3.34.0",
     "@tiptap/extension-bullet-list": "^2.23.1",
+    "@tiptap/extension-color": "^2.24.1",
     "@tiptap/extension-emoji": "^2.23.1",
     "@tiptap/extension-font-family": "^2.23.1",
     "@tiptap/extension-highlight": "^2.23.1",
@@ -39,6 +40,7 @@
     "next": "15.4.0-canary.104",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
   },
