--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
+    "@tiptap/extension-bubble-menu": "^2.24.2",
     "@tiptap/extension-bullet-list": "^2.23.1",
     "@tiptap/extension-color": "^2.24.1",
     "@tiptap/extension-emoji": "^2.23.1",
@@ -47,7 +48,8 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
