--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tiptap/extension-table-row": "^2.23.1",
     "@tiptap/extension-task-item": "^2.23.1",
     "@tiptap/extension-task-list": "^2.23.1",
+    "@tiptap/extension-text-align": "^2.25.0",
     "@tiptap/extension-text-style": "^2.23.1",
     "@tiptap/extension-underline": "^2.23.1",
     "@tiptap/pm": "^2.23.1",
