--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
+    "@tiptap/core": "^2.25.0",
     "@tiptap/extension-bubble-menu": "^2.24.2",
     "@tiptap/extension-bullet-list": "^2.23.1",
     "@tiptap/extension-color": "^2.24.1",
@@ -42,6 +43,7 @@
     "@tiptap/starter-kit": "^2.23.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.0-canary.104",
     "next-themes": "^0.4.6",
