--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.0-canary.104",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
