--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.99",
     "embla-carousel-react": "^8.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.0-canary.104",
     "next-themes": "^0.4.6",
@@ -61,12 +63,14 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tippy.js": "^6.3.7",
-    "tiptap-extension-resize-image": "^1.2.2"
+    "tiptap-extension-resize-image": "^1.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.3.5",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
