--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tiptap/pm": "^2.23.1",
     "@tiptap/react": "^2.23.1",
     "@tiptap/starter-kit": "^2.23.1",
+    "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -53,7 +54,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.525.0",
-    "next": "15.4.0-canary.104",
+    "next": "15.4.5",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "prettier-plugin-organize-imports": "^4.1.0",
