--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@harshtalks/slash-tiptap": "^1.3.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.8.3",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -19,9 +20,11 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tiptap/core": "^2.25.0",
     "@tiptap/extension-bubble-menu": "^2.24.2",
     "@tiptap/extension-bullet-list": "^2.23.1",
+    "@tiptap/extension-code-block-lowlight": "^2.23.1",
     "@tiptap/extension-color": "^2.24.1",
     "@tiptap/extension-emoji": "^2.23.1",
     "@tiptap/extension-font-family": "^2.23.1",
@@ -29,7 +32,9 @@
     "@tiptap/extension-image": "^2.23.1",
     "@tiptap/extension-link": "^2.23.1",
     "@tiptap/extension-list-item": "^2.23.1",
+    "@tiptap/extension-mathematics": "^2.23.1",
     "@tiptap/extension-ordered-list": "^2.23.1",
+    "@tiptap/extension-placeholder": "^2.23.1",
     "@tiptap/extension-subscript": "^2.23.1",
     "@tiptap/extension-superscript": "^2.23.1",
     "@tiptap/extension-table": "^2.23.1",
@@ -51,8 +56,11 @@
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.99",
     "embla-carousel-react": "^8.6.0",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "katex": "^0.16.22",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
